--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: #3f3f3f;
-    font-family: 'FontAwesome', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -307,10 +307,29 @@ p {
     font-size: 2.25em;
     color: #777;
     width: 48px;
+    height: 48px;
     margin: 0 2px;
     line-height: 42px;
     vertical-align: middle;
     text-align: center;
+}
+
+#sidebar-footer a.github-button {
+    line-height: 44px;
+}
+
+#sidebar-footer a.discord-button svg {
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+}
+
+#sidebar-footer a.discord-button svg path {
+    fill: #777;
+}
+
+#sidebar-footer a.discord-button:hover svg path {
+    fill: #fff;
 }
 
 #sidebar-footer a:hover, #sidebar-footer button:hover, .close-statistics-button:hover, .footer-button:hover {
