--- a/public/styles.css
+++ b/public/styles.css
@@ -204,18 +204,19 @@ p {
 /* Sidebar */
 
 #sidebar {
+    background: black;
     position: absolute;
     top: 0;
     left: 0;
     width: 350px;
     height: 100%;
-    background: linear-gradient(rgb(42, 42, 42), rgb(32, 32, 32));
-    border-right: 2px solid black;
+    border-right: 1px solid black;
 }
 
 #sidebar-header {
     height: 70px;
     background: linear-gradient(rgb(24, 24, 24), rgb(12, 12, 12));
+    border-bottom: 1px solid black;
     padding: 7px;
 }
 
@@ -340,6 +341,7 @@ p {
 /* Inner Contents of Sidebar */
 
 #sidebar-body {
+    background: linear-gradient(rgb(42, 42, 42), rgb(32, 32, 32));
     position: absolute;
     top: 70px;
     bottom: 64px;
@@ -353,7 +355,6 @@ p {
     bottom: 70px;
     left: 0;
     right: 0;
-    padding: 12px;
     overflow: auto;
 }
 
@@ -372,13 +373,12 @@ p {
     height: 46px;
     background: #121212;
     padding: 4px 0;
-    margin: -12px -12px 10px -12px;
     font-size: 1.45em;
-    border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
 
 #sidebar-body .menu-page {
+    padding: 12px;
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -533,12 +533,7 @@ p {
 }
 
 .upgrade-list {
-    background: #222222;
-    margin: 0;
-    border: 1px solid black;
-    border-radius: 5px;
     text-align: center;
-    margin-bottom: 10px;
 }
 
 .upgrade-list > .settings-title {
@@ -991,6 +986,10 @@ p {
     line-height: 30px;
     margin-bottom: 18px;
     overflow: hidden;
+}
+
+.menu-body .settings-option-wrapper:last-child {
+    margin-bottom: 0;
 }
 
 .settings-option-wrapper .settings-title {
