Added group selection.
- Added selecting multiple objects at once.
- Added visual selection dragging on the board.
- Cloning, locking, and deleting all work with multiple objects.
- Updated menu to support selecting multiple objects.
- Replaced entity selection and pickup.
- Fixed various focus issues with keys.

Known Issues:
- Rotating is disabled for multiple objects for now.
- Rails snapping to grid when multiple objects are selected has also been disabled. Rails were coming loose in the process.
- Buildings with weird half-meter sizes will snap to the grid where they are, not based on selection.
- Mouse events are still broken if you mouse out of the main board window while interacting with it.

--- a/public/styles.css
+++ b/public/styles.css
@@ -946,6 +946,10 @@ p {
     color: #dd3030;
 }
 
+.title-button.lock-button .partially-locked {
+    color: #ff8f00;
+}
+
 .trash-button:hover .inner-button {
     border-color: #dd3030;
 }
