--- a/public/styles.css
+++ b/public/styles.css
@@ -426,7 +426,7 @@ input[type=number].btn-small {
 #construction-page > .menu-page {
     background: black;
     position: absolute;
-    top: 100px;
+    top: 147px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -440,11 +440,16 @@ input[type=number].btn-small {
 
 #construction-page .construction-modes-wrapper {
     width: 100%;
-    height: 45px;
     background: #090909;
     position: relative;
     border: 1px solid #090909;
     margin: 0 0 5px 0;
+}
+
+#construction-page .construction-mode-switcher, #construction-page .construction-layer-switcher {
+    width: 100%;
+    height: 45px;
+    margin: 0;
 }
 
 #construction-page .construction-mode-button {
@@ -480,6 +485,24 @@ input[type=number].btn-small {
 
 #construction-page .construction-mode-button:not(.mode-selected):hover {
     background: #222;
+}
+
+#construction-page .construction-layer-switcher > div {
+    background-color: #141414;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+#construction-page .construction-layer-switcher > div:hover {
+    background-color: #181818;
+    border-color: white;
+}
+
+#construction-page .construction-layer-switcher > div.layer-active {
+    background-color: #404040;
 }
 
 #construction-page .construction-filter-wrapper {
